--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "pug": "^2.0.0-rc.1"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-register": "^6.26.0",
     "nodemon": "^1.8.1"
   }
 }
