--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node bin/www",
+    "build-dev": "./node_modules/.bin/webpack-dev-server --config webpack.config.js --colors",
     "dev": "./node_modules/.bin/nodemon bin/www",
     "prd": "pm2 start bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -33,6 +34,8 @@
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "nodemon": "^1.8.1"
+    "nodemon": "^1.8.1",
+    "react-hot-loader": "^4.0.0-beta.17",
+    "webpack-dev-server": "^2.11.1"
   }
 }
