--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "koa-router": "^7.1.1",
     "koa-static": "^3.0.0",
     "koa-views": "^5.2.1",
+    "mobx": "^3.4.1",
+    "mobx-react": "^4.3.5",
     "pug": "^2.0.0-rc.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -29,9 +31,11 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-react-native-stage-0": "^1.0.1",
     "babel-register": "^6.26.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "nodemon": "^1.8.1",
