--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "pug": "^2.0.0-rc.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "webpack-isomorphic-tools": "^3.0.5"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
